--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,9 @@
 
 body {
   font-family: "Gabarito", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 .box-shadow-apply {
   box-shadow: 0px 1px 10px 1px rgb(0, 0, 0, 0.1);
